@@ -1,0 +1,50 @@
+<h2>Plan de campagne</h2>
+
+Since content and form of a score are separate, we have to match that
+in the design of software. Hence, the basic blueprint  of our program
+should this scheme
+
+<table>
+<tr>
+<td align="center">
+<img src="@IMAGES@simple-notation.png">
+</td>
+<td align="center">
+<b>&larr;</b>
+</td>
+<td align="center">
+<tt>{ c'4 d'8 }</tt>
+</td>
+</tr>
+<tr>
+<td align="center">
+1. form
+</td>
+<td align="center">
+2. translation
+</td>
+<td align="center">
+3. content
+</td>
+</tr>
+</table>
+
+In effect, we are conquering the problem by dividing it into
+subproblems
+
+<ol start="1">
+<li>Typography:  <b>where</b> to put symbols
+<li>Notation:  <b>what</b> symbols to produce
+<li>Representation: how to <b>encode</b>  music
+</ol>
+
+Finally, whenever you subdivide a problem, a new problem is created,
+<ol start="4">
+<li> Architecture: glue everything <b>together</b>
+</ol>
+
+
+
+<p align=right>
+Next: <a href=implementing-notation.html>Impressive, but does it also
+work in theory</a>? A practical approach to capturing notation.
